Add new ratting glances
