# corptools/api/character/at_a_glance.py
@@ -7,7 +7,10 @@ from allianceauth.services.hooks import get_extension_logger
 
 from corptools import models
 from corptools.api.helpers import (
-    get_alts_queryset, get_main_character, glance_incursion_check,
+    get_alts_queryset, get_main_character, glance_capital_count,
+    glance_incursion_check, glance_officers_count,
+    glance_officers_cruiser_count, glance_officers_frigate_count,
+    glance_rest_count, glance_supers_count, glance_titans_count,
     glances_assets_character, glances_gas_check, glances_ice_check,
     glances_industry_check, glances_market_check, glances_missions_check,
     glances_moon_check, glances_ore_check, glances_pi_check,
@@ -76,6 +79,36 @@ class GlanceApiEndpoints:
             output["mining_moon"] = roundFloat(glances_moon_check(characters))
             output["mining_gas"] = roundFloat(glances_gas_check(characters))
             output["mining_ice"] = roundFloat(glances_ice_check(characters))
+
+            return output
+
+        @api.get(
+            "account/{character_id}/glance/ratting",
+            response={200: dict, 403: str},
+            tags=self.tags
+        )
+        def get_glance_ratting_counts(request, character_id: int):
+            if character_id == 0:
+                character_id = request.user.profile.main_character.character_id
+
+            response, main = get_main_character(request, character_id)
+
+            if not response:
+                return 403, _("Permission Denied")
+
+            characters = get_alts_queryset(main)
+
+            output = {}
+
+            output["subcap"] = glance_rest_count(characters)
+            output["capital"] = glance_capital_count(characters)
+            output["supers"] = glance_supers_count(characters)
+            output["titans"] = glance_titans_count(characters)
+            output["officer"] = glance_officers_count(characters)
+            output["officer_cruiser"] = glance_officers_cruiser_count(
+                characters)
+            output["officer_frigate"] = glance_officers_frigate_count(
+                characters)
 
             return output
 
